--- a/API-MAPS/css/style-map.css
+++ b/API-MAPS/css/style-map.css
@@ -1,10 +1,15 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     height: 450px;
 }
 
 #map {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 65%;
     border: 1px solid blue;
 }
 
